# ai-dlp-proxy

./: .gitignore  README.md  dlp-daemon.sh  dlp-supervisor  install.sh  plan.md  pyproject.toml  run.sh  setup_iptables.sh  setup_transparent.sh  start_dlp.sh
docs/: detection_edge_cases.json  detection_edge_cases.md  dev-log-2026-04-19.md  dev-log-2026-05-17.md  gui-control-validation.md  implementation.md  ml-fp-filter-result.md  ml-integration-plan.md  obsecurity-blog-2026-05-17.md  path_plan.md  ppt_content.md  regex-pipeline-deep-dive.md  slm-finetuning-plan.md  slm-runtime-optimization-plan.md  slm_dataset_threat_analysis.md  upgrade_path_plan.md  web-dashboard-plan.md  windows-opencode-setup.md
notebooks/: dlp_fp_filter_ml.ipynb
scripts/: engine_server.py  export_certs.sh  inspect_traffic.py  slm_api_server.py  start_slm_services.sh  train_dlp_slm.py  tui.py
sni-router/: Cargo.toml
src/: __main__.py
tests/: build_ml_dataset.py  build_slm_dataset.py  fp_filter_best_model.pkl  generate_proto_phase1_dataset.py  generate_synthetic_dataset.py  pii_findings_ml_dataset.csv  proto_phase1_false_negative_risk.csv  proto_phase1_false_positive.csv  proto_phase1_over_detection_risk.csv  proto_phase1_realistic_false_positive.csv  proto_phase1_realistic_true_positive.csv  proto_phase1_true_positive.csv  run_gui_control_checks.py  run_proto_regex_tests.py  run_tests.py  synthetic_false_negative_risk.csv  synthetic_false_positive.csv  synthetic_realistic_true_positive.csv  synthetic_true_positive.csv  test_cases.csv  test_pipeline_slm_inputs.py  test_requests.json  (+2 more)
(+186 files in other folders)
