[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dlp-proxy"
version = "0.1.0"
description = "AI Agent DLP Proxy — HTTPS 트래픽 민감 데이터 탐지·마스킹"
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "llama-cpp-python>=0.3.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.4.0"]
dev  = ["pytest", "pytest-asyncio"]

[project.scripts]
ai-dlp-proxy = "ai_dlp_proxy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
