[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dlp-proxy"
version = "0.1.0"
description = "AI Agent DLP Proxy — HTTPS 트래픽 민감 데이터 탐지·마스킹"
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "llama-cpp-python>=0.3.0",
]

[project.optional-dependencies]
slm = [
    "transformers>=4.46",
    "accelerate>=1.0",
    "torch>=2.4",
    "safetensors>=0.4",
    "bitsandbytes>=0.43; platform_system == 'Linux'",
]
vllm = ["vllm>=0.4.0"]
dev  = ["pytest", "pytest-asyncio"]

[project.scripts]
ai-dlp-proxy = "__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
